# tinygrad_aot

./: .gitmodules  AGENTS.md  README.md  pyproject.toml
src/tinygrad_aot/: __init__.py  aot.py  utils.py
test/: .gitignore  aot.py  conftest.py  pol_benchmark.cpp  test_aot.py
