[project]
name = "tinygrad-aot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "tinygrad",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.uv.sources]
# tinygrad = { path = "src/tinygrad"}
tinygrad = { git = "https://github.com/tinygrad/tinygrad", rev= "baf3b60cfb28c7ee950414538ae936498ed237f3"}

[tool.ruff]
line-length = 120
indent-width = 2
exclude = ["src/tinygrad"]
